--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,13 @@ body{
     margin: 0;
     
 }
+.backgroudclip{
+    width: 100%;
+    position: absolute;
+    right: 0%;
+    bottom: 0%;
+    z-index: -1;
+} 
 .container1{
 padding: 0;
 margin: 0;
@@ -22,7 +29,7 @@ li{
 #container1{
     padding-top: 5%;
     padding-left: 10%;
-    background-image: url(./images/hyundai-motor-group-r90ZgffimHk-unsplash.jpg);
+    /* background-image: url(./images/hyundai-motor-group-r90ZgffimHk-unsplash.jpg); */
     background-position: center;
     background-repeat: no-repeat;
     height: 400px;
