--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,9 @@ li{
     gap: 2%;
     /* padding: 3%; */
 }
+h4{
+    font-size: 13px;
+}
 #g{
     background-color: rgb(248, 248, 77);
 }
@@ -97,7 +100,7 @@ span{
     height: 200px;
 }
 p{
-    font-size: 10px;
+    font-size: 13px;
 }
 .types{
     display: flex;
